found out ghost whitespace issue and updated to some positioned displays to account for this on the home page. Almost done with home page styling, then will move on to products next.

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,10 @@
+body {
+  width: 100%;
+}
+
 footer {
   --min-foot-size: 200px;
+  width: 100%;
   display: grid;
   height: fit-content;
   background-color: hsl(200deg, 73%, 44%);
