--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,6 @@
 body {
   height: 100%;
+  width: 100%;
 }
 
 .wrapper {
@@ -27,33 +28,38 @@ body {
 }
 
 .home-welcome {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-weight: var(--font-weight-medium);
   color: white;
   margin-bottom: 16px;
-  font-size: 4rem;
-  max-width: 20ch;
+  font-size: 5rem;
   text-align: center;
   padding: 8px;
 }
 
-.coffee-center {
-  display: grid;
-  place-content: center;
-}
-
 .shop-button {
+  position: absolute;
+  top: calc(50% + 300px);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
   color: white;
-  background-color: hsla(187, 8%, 78%);
+  background-color: black;
   height: 75px;
   width: 200px;
   font-weight: var(--font-weight-medium);
   border: 4px solid white;
-  will-change: transform;
-  transition: transform 300ms ease-in-out;
+  will-change: transition;
+  transition: background-color 100ms, color 100ms;
 }
 
 .shop-button:hover {
- transform: translateY(-10%);
+ background-color: white;
+ color: black;
+
 }
 
 .statements {
@@ -90,11 +96,14 @@ body {
   background-color: hsla(187, 8%, 78%);
   margin-top: 24px;
   font-weight: var(--font-weight-medium);
-  transition: opacity 400ms;
+  transition: transform 400ms;
+  border: 2px solid black;
+  letter-spacing: 2px;
+  will-change: transform;
 }
 
 .statements button:hover {
-  opacity: .65;
+ transform: scale(105%);
 }
 
 .product-advertise {
@@ -108,29 +117,43 @@ body {
   width: 100%;
 }
 
-.image-container {
-  flex: 1;
+.img-container {
+  overflow:hidden;
+}
+
+.white-border {
+  border: 2px solid white;
+  box-shadow: -8px 12px 2px hsl(0deg 0% 0% / 0.25);
+}
+
+.img-container:hover img {
+  transform: scale(105%);
+  will-change: transform;
 }
 
 .product-advertise img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  aspect-ratio: 1/1;
+  display: block;
+  transition: transform 400ms;
+  will-change: transform;
 }
 
 .product-button {
   height: fit-content;
   width: fit-content;
-  padding: 16px;
+  /* padding: 16px; */
   margin-left: auto;
   margin-right: auto;
   /* margin-right: 565px; */
   margin-top: 64px;
+  border: 2px black solid;
+  transition: transform 400ms;
+  will-change: transform;
 }
 
-.product-button button:hover {
-  opacity: .65;
+.product-button:hover {
+  transform: scale(105%);
 }
 
 .product-button button {
@@ -138,9 +161,9 @@ body {
   width: 150px;
   height: 50px;
   color: white;
+  letter-spacing: 2px;
   font-weight: var(--font-weight-medium);
   background-color: hsla(187, 8%, 78%);
-  transition: opacity 400ms ease-out;
 }
 
 .spacer {
@@ -171,11 +194,16 @@ body {
   margin-right: auto;
   display: grid;
   grid-template-columns:
-  repeat(auto-fit, minmax(150px, 1fr));
+  repeat(auto-fit, minmax(min(250px, 100%), 1fr));
   place-content: center;
   padding: 32px;
   gap: 32px;
   background-color: hsl(200deg, 73%, 75%);
+}
+
+.product-end img {
+  display: block;
+  transition: transform 400ms;
 }
 
 .img-container {
@@ -227,11 +255,6 @@ body {
 @media (max-width: 550px){
 
   .product-advertise {
-    flex-direction: column;
-    gap: 200px;
-  }
-
-  .product-end {
     flex-direction: column;
     gap: 200px;
   }
