--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,10 @@
 
 body, html {
   height: 100%;
+  width: 100%;
   margin: 0;
 }
+
 
 body {
   font-family: "Roboto","Raleway",Helvetica,sans-serif;
@@ -25,3 +27,4 @@ body {
   --font-weight-medium: 630;
   --font-weight-dark: 945;
 }
+
